Changelog
---------

Next release 1.7
````````````````
* Improved warning message when closing magic.Magic at garbage collection.

1.6 (2013-05-29)
````````````````
* Stop forcing the installation of distribute.

1.5 (2012-12-18)
````````````````
* Work around for Issue 5289 with ctypes on Solaris.
* Improved repr string for magic.Magic object.
* Add CONTRIBUTORS file to package.

1.4 (2012-12-11)
````````````````
* Automatically clean up memory when garbage collected.
* Add memory management section to documentation.

1.3 (2012-05-30)
````````````````
* Test against libmagic 5.11.

1.2 (2012-03-26)
````````````````
* Add `command line invocation <http://filemagic.readthedocs.org/en/latest/command.html>`_.

1.1 (2012-03-16)
````````````````
* Sphinx documentation on `Read the Docs <http://readthedocs.org/>`_
* Prevent segmentation fault when using list() with older libmagic

1.0 (2012-03-15)
````````````````
* First version released